--- a/package/Runtime/DirectAR/Needle.CustomUSDZBehaviours~/package.json
+++ b/package/Runtime/DirectAR/Needle.CustomUSDZBehaviours~/package.json
@@ -8,7 +8,7 @@
     "three": "npm:@needle-tools/three@0.146.8"
   },
   "devDependencies": {
-	  "@needle-tools/engine": "file:E:\\git\\needle\\needle-tiny-playground\\modules\\needle-tiny\\js\\package~",
+	  "@needle-tools/engine": "^3.5.11-beta",
 	  "three": "npm:@needle-tools/three@0.146.8",
 	  "@types/three": "0.146.0"
 	}
